<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="enter_weight_kg">Enter Weight (kg)</string>
    <string name="enter_height_cm">Enter Height (cm)</string>
    <string name="button_calculate">Calculate</string>
    <string name="button_reset">Reset</string>
    <string name="image_bmi">imageBMI</string>
    <string name="dev">Developed by Zahiriddin Rustamov</string>
</resources>
